--- a/satsukai.frontend/src/styles/globals.css
+++ b/satsukai.frontend/src/styles/globals.css
@@ -15,8 +15,8 @@ body {
   overflow-x: hidden;
 }
 
-.logo{
-  font-size: 30px;
+.expr{
+  font-size: 60px;
   color: #5e5e5e;
   font-family: "JansinaRegular";
 }
