--- a/satsukai.frontend/src/styles/globals.css
+++ b/satsukai.frontend/src/styles/globals.css
@@ -20,3 +20,18 @@ body {
   color: #5e5e5e;
   font-family: "JansinaRegular";
 }
+
+
+
+@keyframes slideInRight {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.animate-slideInRight {
+  animation: slideInRight 0.5s ease-in-out;
+}
